cleaned up selected projects section

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <br>
           <div class="row">
             <div class="col-md-4" >
-              <div class="card mb-4 box-shadow" style="border-left: 10px solid darkgreen;">
+              <div class="card mb-4 box-shadow" >
                 <img class="card-img-top" src="images/mywins.png"  alt="MyWins">
                 <div class="card-body">
                   <h1></h1>
@@ -103,7 +103,7 @@
               </div>
             </div>
             <div class="col-md-4">
-              <div class="card mb-4 box-shadow" style="border-left: 10px solid darkturquoise;">
+              <div class="card mb-4 box-shadow" >
                 <img class="card-img-top" src="images/EaTown.png" alt="Card image cap">
                 <div class="card-body">
                   <h4>EaTown</h4>
@@ -118,7 +118,7 @@
               </div>
             </div>
             <div class="col-md-4">
-              <div class="card mb-4 box-shadow" style="border-left: 10px solid blue;">
+              <div class="card mb-4 box-shadow" >
                 <img class="card-img-top" src="images/CyprusDashboard.png" alt="Card image cap">
                 <div class="card-body">
                   <h4>Cyprus Copper Mugs Dashboard</h4>
@@ -137,7 +137,7 @@
             </div>
 
             <div class="col-md-4">
-              <div class="card mb-4 box-shadow" style="border-left: 10px solid darkturquoise;">
+              <div class="card mb-4 box-shadow" >
                 <img class="card-img-top" src="paris.jpg" alt="Card image cap">
                 <div class="card-body">
                   <h4>Travel Journal</h4>
@@ -154,7 +154,7 @@
               </div>
             </div>
             <div class="col-md-4">
-              <div class="card mb-4 box-shadow" style="border-left: 10px solid blue;">
+              <div class="card mb-4 box-shadow" >
                 <img class="card-img-top" src="images/teashoppe.png" alt="Card image cap">
                 <div class="card-body">
                   <h4>TeaShoppe</h4>
@@ -170,7 +170,7 @@
               </div>
             </div>
             <div class="col-md-4">
-              <div class="card mb-4 box-shadow" style="border-left: 10px solid darkgreen;">
+              <div class="card mb-4 box-shadow" >
                 <img class="card-img-top" src="images/cat-game.png" alt="Card image cap">
                 <div class="card-body">
                   <h4>Puzzletastic</h4>
@@ -239,7 +239,8 @@
 
 
 
-        <h1>About me told through D3.js:</h1>
+        <h1>About Me </h1>
+        <h4 style="color:darkgrey;">Technology used: D3.js, HTML5, CSS3, Bootstrap4</h4>
       </div>
       <div class=" bg-light" width="100%;">
         <div class="container">
