--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
           <div class="row">
             <div class="col-md-4" >
               <div class="card mb-4 box-shadow" style="border-left: 10px solid darkgreen;">
-                <div id="#linechart">
+                <div id="linechart">
 
                 </div>
                 <!-- <div class="card-body">
@@ -306,8 +306,8 @@
               <div class="card mb-6 box-shadow" style="border-left: 10px solid darkgreen;">
                 <img class="card-img-top" src="images/cat-game.png" alt="Card image cap">
                 <div class="card-body">
-                  <h4>Puzzletastic</h4>
-                  <p class="card-text">Small video game arcade website. Three games were built, one by each team member.
+                  <h4>Passion for Traveling</h4>
+                  <p class="card-text">
                     <br><br>
                     Technology used: Built with Unity3D, knex.js, JavaScript, postgreSQL, HTML5, Facebook oAuth and CSS3.</p>
 
@@ -359,6 +359,67 @@
 <script type="text/javascript" src="js/data.tsv"></script>
 
 <script type="text/javascript" src="js/linechartreusable.js"></script>
+
+  <script>
+  // var svg = d3.select('#linechart').append("svg").attr('width', 200).attr('height', 300),
+    var margin = {top: 20, right: 20, bottom: 30, left: 50},
+      width = 300,
+      height = 300 ;
+
+
+    var svg = d3.select('#linechart').append('svg').attr('width', 300).attr('height', 300)
+    .append('g')attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+  var parseTime = d3.timeParse("%d-%b-%y");
+
+  var x = d3.scaleTime()
+      .rangeRound([0, width]);
+
+  var y = d3.scaleLinear()
+      .rangeRound([height, 0]);
+
+  var line = d3.line()
+      .x(function(d) { return x(d.date); })
+      .y(function(d) { return y(d.close); });
+
+  d3.tsv("data.tsv", function(d) {
+    d.date = parseTime(d.date);
+    d.close = +d.close;
+    return d;
+  }, function(error, data) {
+    if (error) throw error;
+
+    x.domain(d3.extent(data, function(d) { return d.date; }));
+    y.domain(d3.extent(data, function(d) { return d.close; }));
+
+    g.append("g")
+        .attr("transform", "translate(0," + height + ")")
+        .call(d3.axisBottom(x))
+      .select(".domain")
+        .remove();
+
+    g.append("g")
+        .call(d3.axisLeft(y))
+      .append("text")
+        .attr("fill", "#000")
+        .attr("transform", "rotate(-90)")
+        .attr("y", 6)
+        .attr("dy", "0.71em")
+        .attr("text-anchor", "end")
+        .text("Price ($)");
+
+    g.append("path")
+        .datum(data)
+        .attr("fill", "none")
+        .attr("stroke", "steelblue")
+        .attr("stroke-linejoin", "round")
+        .attr("stroke-linecap", "round")
+        .attr("stroke-width", 1.5)
+        .attr("d", line);
+  });
+
+
+  </script>
 
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
